--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.NotificationApp"
         tools:targetApi="31">
+        <receiver android:name=".receiver.MyReceiver"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
